--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World!
+<HTML>
+
+<HEAD>
+
+<TITLE>Test Page</TITLE>
+
+</HEAD>
+
+<BODY BGCOLOR="FFFFFF">
+
+<HR>
+
+  <div id="a1">Hello World! </div>
+
+</BODY>
+
+</HTML>
