--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ function create(id, text) {
 }
 
 setTimeout(function() {create("p1", "paragraph1")}, 3000);
+setTimeout(function() {create("p2", "paragraph1")}, 3000);
   
 </script>
 
