--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
 <body>
 
-
 <div id="placeholder"> </div>
-
-<p id="demo">Testing</p>
+<p id="testing">Testing Delayed load</p>
 
 <script>
 var firstImg;
@@ -23,8 +21,6 @@ function create(id, text) {
 
 setTimeout(function() {create("p1", "paragraph1")}, 3000);
 setTimeout(function() {create("p2", "paragraph2")}, 6000);
-  
 </script>
-
 </body>
 </html> 
