--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ function create(id, text) {
    	element.appendChild(tag);
 	stop1 = new Date();
 	firstImg = stop1 - start;
-	tag.appendChild(firstImg);
+	text = document.createTextNode(firstImg);
+	tag.appendChild(text);
 	console.log("firstImg: " + firstImg)
 }
 
